--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="shortcut icon" type="img/png" href="img/logo.png">
+<link rel="icon" type="img/png" href="img/logo.png">
 </head>
 <body>
     <!-------------Navigation-------------->
