--- a/index.html
+++ b/index.html
@@ -344,23 +344,15 @@ Graphic Designers today possess the ultimate power of communicating messages tha
 <div class="container">
 <h1>Get in Touch</h1>
 <div class="row">
-<div class="col-md-6">
-    <form class="contact-form">
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Your Name">   
-    </div>
-        <div class="form-group">
-        <input type="number" class="form-control" placeholder="Your Number">   
-    </div>
-        <div class="form-group">
-        <input type="email" class="form-control" placeholder="Email ID">   
-    </div>
-    <div class="form-group">
-        <textarea class="form-control" rows="4" placeholder="Your Message"></textarea> 
-    </div>
-        <button type="submit" class="btn btn-primary">SEND MESSAGE</button>
-    </form>
-</div>
+    <div class="col-md-6">
+        <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+        <script>
+          hbspt.forms.create({
+            portalId: "8316610",
+            formId: "175ac941-6b79-43e4-99db-7dae8851a7d0"
+        });
+        </script>
+        </div>
 <div class="col-md-6 contact-info">
     <div class="follow">
     <b>Address:</b><i class="fa fa-map-marker"></i> Bhayander (east) , Thane , Maharashtra , IN 
@@ -381,25 +373,6 @@ Graphic Designers today possess the ultimate power of communicating messages tha
 </div>
 </div>
 </div>    
-</section>
-
-
-
-
-<!-----------------Order-------------->
-<section id="order">
-<div id="container">
-    <center>
-    <h1>Want to place your Order?</h1>
-    <h2>DROP OFF YOUR ORDER</h2>
-    <i class="fa im fa-hand-o-right"></i> <button type="submit" class="btn btn-primary"> <a href="https://forms.gle/Eti63MPF5Hj3uPk37"><i class="fa fa-dropbox"></i> Drop Off</a></button>  <i class="fa im fa-hand-o-left"></i>
-    <br><br>
-    <h2> OR </h2>
-    <br>
-    <h2> Direct Contact with Team</h2>
-    <i class="fa im fa-hand-o-right"></i> <button type="submit" class="btn btn-primary"> <a href="https://www.instagram.com/_brand.origin/"><i class="fa fa-users"></i> Contact Them </a></button> <i class="fa im fa-hand-o-left"></i>
-    </center>
-</div>
 </section>
     
         <!-----------------Footer-------------->
