--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
       <li class="nav-item">
         <a class="nav-link" href="#contact">Contact</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#order">Place Order</a>
-      </li>
     </ul>
   </div>
 </nav>
@@ -215,7 +212,7 @@ Graphic Designers today possess the ultimate power of communicating messages tha
 <section id="promo">
 <div class="container">
 <p>Get Your Logo Designed</p>
-<a href="#order " class="btn btn-primary">Contact Us</a>
+<a href="#contact " class="btn btn-primary">Contact Us</a>
 </div>    
 </section>
     
