--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ Graphic Designers today possess the ultimate power of communicating messages tha
         <!-----------------Footer-------------->
 <section id="footer">
     <div class="container text-center">
-    <p><i class="fa fa-copyright"></i>Copyright by <a href="index.html#about">Brand Origin</a></p>
+    <p><i class="fa fa-copyright"></i>Copyright by <a href="index.html">Brand Origin</a></p>
     </div>
 </section>
 
