--- a/index.html
+++ b/index.html
@@ -386,5 +386,8 @@ Graphic Designers today possess the ultimate power of communicating messages tha
         <script>
             var scroll = new SmoothScroll('a[href*="#"]');
         </script>
+
+        <!-- // Mail chimp // -->
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/1c76b20fbf5de898ea62f652c/ef8dda95e5a9a358a9674e681.js");</script>
 </body>
 </html>
