--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ Graphic Designers today possess the ultimate power of communicating messages tha
     </div>
 </section>
     
-    <!-----------------Get in Touch
+    <!-----------------Get in Touch-------------->
 <section id="contact">
 <div class="container">
 <h1>Get in Touch</h1>
@@ -373,7 +373,7 @@ Graphic Designers today possess the ultimate power of communicating messages tha
 </div>
 </div>
 </div>    
-</section>-------------->
+</section>
     
         <!-----------------Footer-------------->
 <section id="footer">
